Fix Doc site's visualizer layout Top navbar was introducing a vertical scrollbar on the whole page

--- a/docs/wwwroot/visualizer/css/app.css
+++ b/docs/wwwroot/visualizer/css/app.css
@@ -38,6 +38,12 @@ body {
     height: inherit;
 }
 
+.navBar {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+}
+
 .uiHeader {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 auto;
